--- a/index.html
+++ b/index.html
@@ -14,28 +14,88 @@
 <body>
     <div class="container pt-5">
         <div class="row">
-            <div class="col text-center">
-                <h4>Border-radius</h4>
-                <p>
-                    <input type="range" id='tl-range' min='0' max='100' value='0' oninput="range_border_radius_change()">
-                    <input type="text" id='tl-text' value=0 disabled>
-                </p>
-                <p>
-                    <input type="range" id='tr-range' min='0' max='100' value='0' oninput="range_border_radius_change()">
-                    <input type="text" id='tr-text' value=0 disabled>
-                </p>
-                <p>
-                    <input type="range" id='bl-range' min='0' max='100' value='0' oninput="range_border_radius_change()">
-                    <input type="text" id='bl-text' value=0 disabled>
-                </p>
-                <p>
-                    <input type="range" id='br-range' min='0' max='100' value='0' oninput="range_border_radius_change()">
-                    <input type="text" id='br-text' value=0 disabled>
-                </p>
+            <div class="col">
+                <div class="accordion" id="menu">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading1">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
+                                Border Radius
+                            </button>
+                        </h2>
+                        <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1"
+                            data-bs-parent="#menu">
+                            <div class="accordion-body">
+                                <p>
+                                    <input type="range" id='tl-range' min='0' max='100' value='0'
+                                        oninput="range_border_radius_change()">
+                                    <input type="text" id='tl-text' value=0 disabled>
+                                </p>
+                                <p>
+                                    <input type="range" id='tr-range' min='0' max='100' value='0'
+                                        oninput="range_border_radius_change()">
+                                    <input type="text" id='tr-text' value=0 disabled>
+                                </p>
+                                <p>
+                                    <input type="range" id='bl-range' min='0' max='100' value='0'
+                                        oninput="range_border_radius_change()">
+                                    <input type="text" id='bl-text' value=0 disabled>
+                                </p>
+                                <p>
+                                    <input type="range" id='br-range' min='0' max='100' value='0'
+                                        oninput="range_border_radius_change()">
+                                    <input type="text" id='br-text' value=0 disabled>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading2">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                                Background Color
+                            </button>
+                        </h2>
+                        <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2"
+                            data-bs-parent="#menu">
+                            <div class="accordion-body">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                                Transform
+                            </button>
+                        </h2>
+                        <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3"
+                            data-bs-parent="#menu">
+                            <div class="accordion-body">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+                                Font
+                            </button>
+                        </h2>
+                        <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4"
+                            data-bs-parent="#menu">
+                            <div class="accordion-body">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col">
                 <div id="example" class="mx-auto">
-                    
+
                 </div>
                 <div class="mt-5">
                     <textarea class="form-control" id="code" rows="4" readonly></textarea>
@@ -43,7 +103,7 @@
             </div>
         </div>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
