--- a/index.html
+++ b/index.html
@@ -98,13 +98,44 @@
                         <h2 class="accordion-header" id="heading3">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                Transform
+                                Font Color
                             </button>
                         </h2>
-                        <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3"
+                        <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading2"
                             data-bs-parent="#menu">
                             <div class="accordion-body">
-
+                                <div class="row mb-1">
+                                    <div class="col-4">
+                                        <label for="fcr-text">Red:</label>
+                                    </div>
+                                    <div class="col">
+                                        <input type="text" id='fcr-text' value=0 oninput="font_color_change()">
+                                    </div>
+                                </div>
+                                <div class="row mb-1">
+                                    <div class="col-4">
+                                        <label for="fcg-text">Green:</label>
+                                    </div>
+                                    <div class="col">
+                                        <input type="text" id='fcg-text' value=0 oninput="font_color_change()">
+                                    </div>
+                                </div>
+                                <div class="row mb-1">
+                                    <div class="col-4">
+                                        <label for="fcb-text">Blue:</label>
+                                    </div>
+                                    <div class="col">
+                                        <input type="text" id='fcb-text' value=0 oninput="font_color_change()">
+                                    </div>
+                                </div>
+                                <div class="row mb-1">
+                                    <div class="col-4">
+                                        <label for="fca-text">Opacity:</label>
+                                    </div>
+                                    <div class="col">
+                                        <input type="text" id='fca-text' value=1 oninput="font_color_change()">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -112,10 +143,24 @@
                         <h2 class="accordion-header" id="heading4">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                Font
+                                Transform
                             </button>
                         </h2>
-                        <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4"
+                        <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading3"
+                            data-bs-parent="#menu">
+                            <div class="accordion-body">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading5">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
+                                Font Family
+                            </button>
+                        </h2>
+                        <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5"
                             data-bs-parent="#menu">
                             <div class="accordion-body">
 
@@ -126,7 +171,7 @@
             </div>
             <div class="col">
                 <div id="example" class="mx-auto">
-
+                    <p id="text">Alina</p>
                 </div>
                 <div class="mt-5">
                     <textarea class="form-control" id="code" rows="4" readonly></textarea>
