--- a/index.html
+++ b/index.html
@@ -146,10 +146,29 @@
                                 Transform
                             </button>
                         </h2>
-                        <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading3"
+                        <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4"
                             data-bs-parent="#menu">
                             <div class="accordion-body">
-
+                                <div class="row mb-1">
+                                    <div class="col-4">
+                                        <label for="sc-range">Scale:</label>
+                                    </div>
+                                    <div class="col">
+                                        <input type="range" id='sc-range' min='0' max='20' value='10'
+                                            oninput="transform_change()">
+                                        <input type="text" id='sc-text' value=1 disabled>
+                                    </div>
+                                </div>
+                                <div class="row mb-1">
+                                    <div class="col-4">
+                                        <label for="ro-range">Rotate:</label>
+                                    </div>
+                                    <div class="col">
+                                        <input type="range" id='ro-range' min='0' max='360' value='0'
+                                            oninput="transform_change()">
+                                        <input type="text" id='ro-text' value=0 disabled>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -157,13 +176,28 @@
                         <h2 class="accordion-header" id="heading5">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
-                                Font Family
+                                Font
                             </button>
                         </h2>
                         <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5"
                             data-bs-parent="#menu">
                             <div class="accordion-body">
-
+                                <div class="row mb-1">
+                                    <div class="col-4">
+                                        <label for="ff-text">Family:</label>
+                                    </div>
+                                    <div class="col">
+                                        <input type="text" class="font" id='ff-text' value="sans-serif" oninput="font_change()">
+                                    </div>
+                                </div>
+                                <div class="row mb-1">
+                                    <div class="col-4">
+                                        <label for="fn-text">Name:</label>
+                                    </div>
+                                    <div class="col">
+                                        <input type="text" class="font" id='fn-text' value="Gill Sans Extrabold" oninput="font_change()">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
